--- a/views/index.erb
+++ b/views/index.erb
@@ -56,7 +56,15 @@
 					<h4>Lokal</h4>
 
 					Lokalen vi håller till i är <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a> på David Bagares gata, helt nyrenoverad för 2011!
+					<br /><br />
 
+					<h4>The List</h4>
+					<p>Add your email to our list to get the latest info and news. <br />Of course, we'll <b>never</b>
+						sell or distribute your email to someone.</p>
+					<form action="/email" method="POST">
+						<input type="text" name="email" />
+						<input type="submit" value="save">
+					</form>
 				</div>
 				
 				<div class="section">
