--- a/views/index.erb
+++ b/views/index.erb
@@ -37,7 +37,7 @@
     </header>
     
     <div id="main">
-			<img src="/images/logo.png" id="logotype" />
+			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
 				<div class="section">
@@ -85,8 +85,8 @@
 					</p>
 <br />
 					<p>
-						<a href="/images/flyer1.png"><img src="/images/flyer1.png" width="100px"/></a>
-						<a href="/images/flyer2.jpg"><img src="/images/flyer2.jpg" width="100px"/></a>
+						<a href="/images/flyer1.png"><img src="/img/flyer1.png" width="100px"/></a>
+						<a href="/images/flyer2.jpg"><img src="/img/flyer2.jpg" width="100px"/></a>
 					</p>	
 				</div>	
 				
