--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ button {  width: auto; overflow: visible; }
 
 body{
 	background-color:#201f1f;
-	background-image:url(../images/bg.png);
+	background-image:url(../img/bg.png);
 }
 
 #container{
