--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -97,13 +97,28 @@
 				<div class="section">
 					<h3>What do we play?</h3>
 					<p>Some random examples:</p>
-					<% if @rand == 1%>					
-					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/mPTpP2N1giU" frameborder="0"></iframe>
-					<% elsif @rand == 2 %>
-					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/HBjDZMJUduo" frameborder="0"></iframe>
-					<% else %>
-					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/cQ13rTa8aYQ" frameborder="0"></iframe>
-					<% end %>
+								<% if @rand == 1%>					
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/mPTpP2N1giU" frameborder="0"></iframe>
+								<% elsif @rand == 2 %>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/HBjDZMJUduo" frameborder="0"></iframe>
+								<% elsif @rand == 3 %>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/cQ13rTa8aYQ" frameborder="0"></iframe>
+								<% elsif @rand == 4%>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/N8Zeu08luWo" frameborder="0"></iframe>
+								<% elsif @rand == 5 %>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/Ztwdffq-HZg" frameborder="0"></iframe>
+								<% elsif @rand == 6 %>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/1j-2KKLWng0" frameborder="0"></iframe>
+								<% elsif @rand == 7%>					
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/TlLWFa1b1Bc" frameborder="0"></iframe>
+								<% elsif @rand == 8 %>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/vwJSd0R_t84" frameborder="0"></iframe>
+								<% elsif @rand == 9 %>
+								<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/kS3rPUvcVA0" frameborder="0"></iframe>					
+								<% else %>						
+			<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/fwimLp4qgSw" frameborder="0"></iframe>					
+			<% end %>
+
 					
 				</div>
 				<br class="clear"/>
