--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -78,7 +78,7 @@
 <br /><br />
 					Lineup:<br />
 					- Residents<br />
-					+ 2 great DJs TBA<br />
+					+ 1 great DJ TBA<br />
 <br />
 					Visuals:<br />
 					- Kinski
