--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+<meta name="google-site-verification" content="M8z33FJkudO8GpriRExkXhn3x8c6zXqvKlD9CDSZgDk" />
   <meta property="og:title" content="Club Pneumatique"/>
     <meta property="og:type" content="club"/>
     <meta property="og:url" content="http://club-pneumatique.org"/>
