fixed spelling error

--- a/views/index.erb
+++ b/views/index.erb
@@ -80,7 +80,7 @@
 <br /><br />
 					Lineup:<br />
 					- Residents<br />
-					+ 1 grymma DJ TBA<br />
+					+ 1 grym DJ TBA<br />
 <br />
 					Visuals:<br />
 					- Kinski
