--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -57,7 +57,7 @@
 
 					<h4>Venue</h4>
 
-					Our venue is <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalen Klubb</a> at David Bagares gata, completely refurbished for 2011!
+					Our venue is <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalen Klubb</a> at David Bagares gata 15, completely refurbished for 2011!
 					<br /><br />
 
 					<h4>The List</h4>
@@ -74,7 +74,7 @@
 					<p>Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! We'll enter the Stockholm club stage, playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!
 <br /><br />
 					When: 21-02<br />
-					Venue: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a>
+					Venue: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
 					- Residents<br />
