--- a/views/index.erb
+++ b/views/index.erb
@@ -57,7 +57,7 @@
 
 					<h4>Lokal</h4>
 
-					Lokalen vi håller till i är <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a> på David Bagares gata, helt nyrenoverad för 2011!
+					Lokalen vi håller till i är <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a> på David Bagares gata 15, helt nyrenoverad för 2011!
 					<br /><br />
 
 					<h4>Mailinglista</h4>
@@ -76,7 +76,7 @@
 						hardstyle, EBM, IDM och electro.
 <br /><br />
 					Tid: 21-02<br />
-					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a>
+					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
 					- Residents<br />
