Synced video list with facebook.

--- a/views/index.erb
+++ b/views/index.erb
@@ -138,7 +138,27 @@
 					
 					<!-- The PCP Principle - Unholy -->
 					<% elsif @rand == 9 %>						
-					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/fwimLp4qgSw" frameborder="0"></iframe>					
+					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/fwimLp4qgSw" frameborder="0"></iframe>	
+					
+					<!-- The Horrorist - One Night In New York City -->
+					<% elsif @rand == 10 %>						
+					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/oVgjC5Gw8y0" frameborder="0"></iframe>
+					
+					<!-- Kopfer Kat - Ubervolt -->
+					<% elsif @rand == 11 %>						
+					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/0xp5si8W4iY" frameborder="0"></iframe>
+					
+					<!-- Mangadrive - Fearbomb (Studio-X Hard Dance remix) -->
+					<% elsif @rand == 12 %>						
+					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/5fxp4kI5rmI" frameborder="0"></iframe>
+					
+					<!-- Moctan - Long Distance Runner -->
+					<% elsif @rand == 13 %>						
+					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/7jaDSYmIZh8" frameborder="0"></iframe>
+					
+					<!-- Hocico - Spirals of Time -->
+					<% elsif @rand == 14 %>						
+					<iframe title="YouTube video player" class="youtube-player" type="text/html" width="750" height="390" src="http://www.youtube.com/embed/874135UN3LM" frameborder="0"></iframe>
 					
 					<% end %>
 					
