Updated line up

--- a/views/index.erb
+++ b/views/index.erb
@@ -79,8 +79,8 @@
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
+					- Gäst DJ Katja Gustafsson!<br />
 					- Residents<br />
-					+ 1 grym DJ TBA<br />
 <br />
 					Visuals:<br />
 					- Kinski
