--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -77,8 +77,8 @@
 					Venue: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
+					- Special guest DJ Katja Gustafsson<br />
 					- Residents<br />
-					+ 1 great DJ TBA<br />
 <br />
 					Visuals:<br />
 					- Kinski
