Uppdaterat med info om mars-eventet.

--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -70,20 +70,27 @@
 				</div>
 				
 				<div class="section">
-					<h3>Next Event - 19 feb</h3>
-					<p>Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! We'll enter the Stockholm club stage, playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!
+					<h3>Next event - 19 mars</h3>
+					<p>After the raging start the time has now come for the follow up of Pneumatique Electronique! This time we give you no less than two guest appearances: KOPFER KAT who just last year released the distorted smack in the face "Skrammelpop". Bone crushing rythmic noise. As icing on top of the seemingly broken speaker for the night we'll have DJ Gaffa, known from the Gothenburg club Shocks, visiting us. He's promised us a proper serving of old school rythmic noise and power electronics.<br /><br />
+					
+					As a gift wrapping around these two terrific acts our resident DJs will be entertaining you with a boat load of danceable electronic, and according to the theme of the night, hard genres.
 <br /><br />
-					When: 21-02<br />
-					Venue: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
+					Time: 21-02<br />
+					Place: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
-					Lineup:<br />
-					- Special guest DJ Katja Gustafsson<br />
-					- Residents<br />
-<br />
+					Schedule:<br />
+					21:00 - DJ Nephilim (Electronica)<br />
+					21:55 - Itchy || Scratchy (Hardstyle)<br />
+					22:50 - Itchy || Scratchy (Acid / Electro)<br />
+					23:45 - DJ Gaffa (Rytmisk noise / Power Electronics)<br />
+					00:30 - KOPFER KAT (Live show)<br />
+					01:00 - DJ Kraken (Aggrotech / Electronica)
+<br /><br />
 					Visuals:<br />
 					- Kinski
 					</p>
 <br />
+
 					<p>
 						<a href="/images/flyer1.png"><img src="/img/flyer1.png" width="100px"/></a>
 						<a href="/images/flyer2.jpg"><img src="/img/flyer2.jpg" width="100px"/></a>
