--- a/views/index.erb
+++ b/views/index.erb
@@ -70,18 +70,22 @@
 				</div>
 				
 				<div class="section">
-					<h3>Nästa Klubb - 19 feb</h3>
-					<p>Premiär för nya månadsklubben Pneumatique Electronique! <br />Vi kickar igång på riktigt
-						för att bjuda Stockholm på det bästa inom dansant elektronisk musik - från rytmisk noise och aggrotech till
-						hardstyle, EBM, IDM och electro.
+					<h3>Nästa Klubb - 19 mars</h3>
+					<p>Efter en enormt framgångsrik premiärkväll är det nu dags för Pneumatique Electronique's andra festtillfälle. Den här gången presenterar vi inte mindre än två akter; KOPFER KAT som förra året släppte den distade käftsmällen "Skrammelpop". Stenhård rytmisk noise utan konstigheter. Som grädde på gruset får vi även besök av DJ GAFFA, känd från klubben Shocks, han har utlovat old school rytmisk noise och power electronics.<br /><br />
+					
+					Mellan dessa akter kommer våra residenta DJs att underhålla er med en drös dansanta, elektroniska och, kvällen till ära, hårda genres.
 <br /><br />
 					Tid: 21-02<br />
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
-					Lineup:<br />
-					- Gäst DJ Katja Gustafsson!<br />
-					- Residents<br />
-<br />
+					Hålltider:<br />
+					21:00 - DJ Nephilim (Electronica)<br />
+					21:55 - Itchy || Scratchy (Hardstyle)<br />
+					22:50 - Itchy || Scratchy (Acid / Electro)<br />
+					23:45 - DJ Gaffa (Rytmisk noise / Power Electronics)<br />
+					00:30 - KOPFER KAT (Liveframträdande)<br />
+					01:00 - DJ Kraken (Aggrotech / Electronica)
+<br /><br />
 					Visuals:<br />
 					- Kinski
 					</p>
