The april event is added.

--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -70,27 +70,25 @@
 				</div>
 				
 				<div class="section">
-					<h3>Next event - 19 mars</h3>
-					<p>After the raging start the time has now come for the follow up of Pneumatique Electronique! This time we give you no less than two guest appearances: KOPFER KAT who just last year released the distorted smack in the face "Skrammelpop". Bone crushing rythmic noise. As icing on top of the seemingly broken speaker for the night we'll have DJ Gaffa, known from the Gothenburg club Shocks, visiting us. He's promised us a proper serving of old school rythmic noise and power electronics.<br /><br />
+					<h3>Next event - 16 april</h3>
+					<p>Third time's a charm, right? As we're promised before, we will, this third saturday of the month, make that extra effort to have you sweating on the dance floor.<br /><br />
 					
-					As a gift wrapping around these two terrific acts our resident DJs will be entertaining you with a boat load of danceable electronic, and according to the theme of the night, hard genres.
-<br /><br />
+					This time around we've booked a fantastic DJ who's promised us an uncompromising set filled with rock-hard techno coming from perhaps the most frenetic corners of the genre. This night she will be performing under the name DJBJ, but some of you might also know her as FunkyTuna.<br /><br />
+					
+					Before and after our amazing head line act our resident DJs will do their utmost to entertain you with sick beats, throwing things into the mix like synth, electro, hardstyle and rhythmic noise.<br /><br/>
+
 					Time: 21-02<br />
 					Place: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
-					Schedule:<br />
-					21:00 - DJ Nephilim (Electronica)<br />
-					21:55 - Itchy || Scratchy (Hardstyle)<br />
-					22:50 - Itchy || Scratchy (Acid / Electro)<br />
-					23:45 - DJ Gaffa (Rytmisk noise / Power Electronics)<br />
-					00:30 - KOPFER KAT (Live show)<br />
-					01:00 - DJ Kraken (Aggrotech / Electronica)
-<br /><br />
-					Visuals:<br />
-					- Kinski
+					Lineup:<br />
+					- DJBJ (our guest for the night with uncompromising hard techno)<br /><br />
+
+					Residents:<br />
+					- DJ Nephilim<br />
+					- Itchy && Scratchy<br />
+					- DJ Kraken
 					</p>
 <br />
-
 					<p>
 						<a href="/images/flyer1.png"><img src="/img/flyer1.png" width="100px"/></a>
 						<a href="/images/flyer2.jpg"><img src="/img/flyer2.jpg" width="100px"/></a>
