--- a/views/index.erb
+++ b/views/index.erb
@@ -70,24 +70,23 @@
 				</div>
 				
 				<div class="section">
-					<h3>Nästa Klubb - 19 mars</h3>
-					<p>Efter en enormt framgångsrik premiärkväll är det nu dags för Pneumatique Electronique's andra festtillfälle. Den här gången presenterar vi inte mindre än två akter; KOPFER KAT som förra året släppte den distade käftsmällen "Skrammelpop". Stenhård rytmisk noise utan konstigheter. Som grädde på gruset får vi även besök av DJ GAFFA, känd från klubben Shocks, han har utlovat old school rytmisk noise och power electronics.<br /><br />
+					<h3>Nästa Klubb - 16 april</h3>
+					<p>Tredje gången gillt, som man säger. Ja, som utlovat så kommer vi även den här tredje lördagen i månaden att anstränga oss lite, lite extra för att få er att svettas rejält på dansgolvet.<br /><br />
 					
-					Mellan dessa akter kommer våra residenta DJs att underhålla er med en drös dansanta, elektroniska och, kvällen till ära, hårda genres.
-<br /><br />
+					Den här gången har vi bokat en fantastiskt energisk DJ som har utlovat ett kompromisslöst set beståendes utav stenhård techno av den mest frenetiska sorten. Hon går för kvällen under namnet DJBJ, men ni kanske även känner igen henne som hennes alterego FunkyTuna.<br /><br />
+					
+					Före och efter DJBJ kommer våra residenta DJs att göra sitt yttersta för att underhålla er med sjuka beats bestående av synth, electro, hardstyle och rytmisk noise.<br /><br />
+
 					Tid: 21-02<br />
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
-					Hålltider:<br />
-					21:00 - DJ Nephilim (Electronica)<br />
-					21:55 - Itchy || Scratchy (Hardstyle)<br />
-					22:50 - Itchy || Scratchy (Acid / Electro)<br />
-					23:45 - DJ Gaffa (Rytmisk noise / Power Electronics)<br />
-					00:30 - KOPFER KAT (Liveframträdande)<br />
-					01:00 - DJ Kraken (Aggrotech / Electronica)
-<br /><br />
-					Visuals:<br />
-					- Kinski
+					Lineup:<br />
+					- DJBJ (vår gäst för kvällen med kompromisslös hård techno)<br /><br />
+
+					Residents:<br />
+					- DJ Nephilim<br />
+					- Itchy && Scratchy<br />
+					- DJ Kraken
 					</p>
 <br />
 					<p>
