Updated info about next event.

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
     <meta property="og:description"
           content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!"/>
 
-  <title>Club Pneumatique - Next Event: 16 April, 2011</title>
+  <title>Club Pneumatique - Next Event: 21 May, 2011</title>
   <meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
   <meta name="author" content="Daniel Sundström">
 
@@ -70,18 +70,27 @@
 				</div>
 				
 				<div class="section">
-					<h3>Nästa Klubb - 16 april</h3>
-					<p>Tredje gången gillt, som man säger. Ja, som utlovat så kommer vi även den här tredje lördagen i månaden att anstränga oss lite, lite extra för att få er att svettas rejält på dansgolvet.<br /><br />
+					<h3>Nästa Klubb - 21 may</h3>
+					<p>Efter en lyckad säsong av klubbkvällar är det nu dags för den spektakulära finalen som inträffar lördagen den 21:a maj. Kvällen till ära har vi bokat det kanadensiska bandet MEMMAKER som frontas av Yann Faussurier och Guillaume Nadon, även kända som ISZOLOSCOPE.<br /><br />
 					
-					Den här gången har vi bokat en fantastiskt energisk DJ som har utlovat ett kompromisslöst set beståendes utav stenhård techno av den mest frenetiska sorten. Hon går för kvällen under namnet DJBJ, men ni kanske även känner igen henne som hennes alterego FunkyTuna.<br /><br />
+					Deras debutalbum HOW TO ENLIST IN A ROBOT UPRISING är enligt dem själva det perfekta uttrycket av mörk, drivande energi skapat utifrån deras intresse för EBM, noise och industri.<br /><br />
 					
-					Före och efter DJBJ kommer våra residenta DJs att göra sitt yttersta för att underhålla er med sjuka beats bestående av synth, electro, hardstyle och rytmisk noise.<br /><br />
+					De kommer att genomföra en osannolikt hård och dansant livespelning som ni garanterat inte vill missa!<br /><br/>
+					
+					För att värma upp era fötter och sinnen inför MEMMAKERS totala urladdning kommer våra residenta DJs att spela den mest dansanta elektroniska musiken för er.<br /><br />
+					
+					Som om detta inte vore nog så har vi i samarbete med SYNTH PICKNICK arrangerat den ultimata förfesten åt er, vi kommer tillsammans med synthpicknick-gänget spela musik för er ute på grönbetet vid Kaknästornet från klockan 13:00. När sedan synthpicknicken lider mot sitt slut är det bara till att ta bussen till NALEN KLUBB för att fortsätta festen!<br /><br />
+					
+					Läs mer om synthpicknick här: 
+					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a>
+					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
+
 
 					Tid: 21-02<br />
 					Plats: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
-					- DJBJ (vår gäst för kvällen med kompromisslös hård techno)<br /><br />
+					- MEMMAKER (LIVE)<br /><br />
 
 					Residents:<br />
 					- DJ Nephilim<br />
