--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -16,7 +16,7 @@
     <meta property="og:description"
           content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!"/>
 
-  <title>Club Pneumatique - Next Event: 16 April, 2011</title>
+  <title>Club Pneumatique - Next Event: 21 May, 2011</title>
   <meta name="description" content="Premiering on the 19th of february is the new monthly recurring club Pneumatique Electronique! Every third saturday we'll be playing danceable electronic music with the ambition to reduce the gap between the plethora of electronic genres available out there!">
   <meta name="author" content="Daniel Sundström">
 
@@ -70,18 +70,26 @@
 				</div>
 				
 				<div class="section">
-					<h3>Next event - 16 april</h3>
-					<p>Third time's a charm, right? As we're promised before, we will, this third saturday of the month, make that extra effort to have you sweating on the dance floor.<br /><br />
+					<h3>Next event - 21 may</h3>
+					<p>Following our successful series of club nights the time has now come for our season finale - scheduled to take place on saturday the 21st of may. In order to make this a memorable night we've booked the canadian band MEMMAKER, fronted by Yann Faussurier and Guillaume Nadon - a.k.a ISZOLOSCOPE.<br /><br />
 					
-					This time around we've booked a fantastic DJ who's promised us an uncompromising set filled with rock-hard techno coming from perhaps the most frenetic corners of the genre. This night she will be performing under the name DJBJ, but some of you might also know her as FunkyTuna.<br /><br />
+					Their debut album HOW TO ENLIST IN A ROBOT UPRISING is, according to them selves, the perfect expression of dark, empowering energy based on their extensive interest and knowledge in EBM, noise and industrial.<br /><br />
 					
-					Before and after our amazing head line act our resident DJs will do their utmost to entertain you with sick beats, throwing things into the mix like synth, electro, hardstyle and rhythmic noise.<br /><br/>
+					For your dancing pleasure they will deliver an unbelievably hard and moving live performance which you do not want to miss!<br /><br/>
+					
+					To get your feet moving and senses warmed up before the torrent of musical energy that MEMMAKER will release upon us our resident DJs will play the utmost danceable electronic music for you.<br /><br />
+					
+					As if this wasn't enough we have a special cooperation with SYNTH PICKNICK in order to create the ultimate pre-party for you. Together with the synth picknick posse we'll be DJing from 13:00 by Kaknästornet. And when the end of synth picknick is nigh all you need to do is to get on the bus and head to NALEN KLUBB to continue the party!<br /><br />
+					
+					Read more about synth picknick here: 
+					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a>
+					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
 
 					Time: 21-02<br />
 					Place: <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal, David Bagares gata 15</a>
 <br /><br />
 					Lineup:<br />
-					- DJBJ (our guest for the night with uncompromising hard techno)<br /><br />
+					- MEMMAKER (LIVE)<br /><br />
 
 					Residents:<br />
 					- DJ Nephilim<br />
