Fixed minor formatting issues and a spelling error.

--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -81,7 +81,7 @@
 					
 					As if this wasn't enough we have a special cooperation with SYNTH PICKNICK in order to create the ultimate pre-party for you. Together with the synth picknick posse we'll be DJing from 13:00 by Kaknästornet. And when the end of synth picknick is nigh all you need to do is to get on the bus and head to NALEN KLUBB to continue the party!<br /><br />
 					
-					Read more about synth picknick here: 
+					Read more about synth picknick here:<br />
 					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a>
 					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
 
