--- a/views/index.erb
+++ b/views/index.erb
@@ -70,7 +70,7 @@
 				</div>
 				
 				<div class="section">
-					<h3>Nästa Klubb - 21 may</h3>
+					<h3>Nästa Klubb - 21 maj</h3>
 					<p>Efter en lyckad säsong av klubbkvällar är det nu dags för den spektakulära finalen som inträffar lördagen den 21:a maj. Kvällen till ära har vi bokat det kanadensiska bandet MEMMAKER som frontas av Yann Faussurier och Guillaume Nadon, även kända som ISZOLOSCOPE.<br /><br />
 					
 					Deras debutalbum HOW TO ENLIST IN A ROBOT UPRISING är enligt dem själva det perfekta uttrycket av mörk, drivande energi skapat utifrån deras intresse för EBM, noise och industri.<br /><br />
@@ -81,7 +81,7 @@
 					
 					Som om detta inte vore nog så har vi i samarbete med SYNTH PICKNICK arrangerat den ultimata förfesten åt er, vi kommer tillsammans med synthpicknick-gänget spela musik för er ute på grönbetet vid Kaknästornet från klockan 13:00. När sedan synthpicknicken lider mot sitt slut är det bara till att ta bussen till NALEN KLUBB för att fortsätta festen!<br /><br />
 					
-					Läs mer om synthpicknick här: 
+					Läs mer om synthpicknick här:<br />
 					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a>
 					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
 
