I suck at web... more minor formatting fixed.

--- a/views/index.erb
+++ b/views/index.erb
@@ -82,7 +82,7 @@
 					Som om detta inte vore nog så har vi i samarbete med SYNTH PICKNICK arrangerat den ultimata förfesten åt er, vi kommer tillsammans med synthpicknick-gänget spela musik för er ute på grönbetet vid Kaknästornet från klockan 13:00. När sedan synthpicknicken lider mot sitt slut är det bara till att ta bussen till NALEN KLUBB för att fortsätta festen!<br /><br />
 					
 					Läs mer om synthpicknick här:<br />
-					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a>
+					<a href="http://synth-picknick.nu/">http://synth-picknick.nu/</a><br />
 					<a href="http://www.facebook.com/event.php?eid=169653376422113">http://www.facebook.com/event.php?eid=169653376422113</a><br /><br />
 
 
