tmp hiding email-form

--- a/views/index.erb
+++ b/views/index.erb
@@ -61,13 +61,13 @@
 					Lokalen vi håller till i är <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalens klubblokal</a> på David Bagares gata 15, helt nyrenoverad för 2011!
 					<br /><br />
 
-					<h4>Mailinglista</h4>
+					<!-- <h4>Mailinglista</h4>
 					<p>Lägg till din email för att få de senaste nyheterna. Vi kommer självklart aldrig sälja eller
 						distribuera din email vidare, vi hatar spam lika mycket som du.</p>
 					<form action="/email" method="POST">
 						<input type="text" name="email" />
 						<input type="submit" value="save">
-					</form>
+					</form> -->
 				</div>
 				
 				<div class="section">
