--- a/views/en_index.erb
+++ b/views/en_index.erb
@@ -60,13 +60,13 @@
 					Our venue is <a href="http://maps.google.com/maps/ms?ie=UTF8&hl=en&msa=0&ll=59.337348,18.068055&spn=0.000823,0.002162&z=19&msid=217493271585070594568.0004992ec2a246626c561">Nalen Klubb</a> at David Bagares gata 15, completely refurbished for 2011!
 					<br /><br />
 
-					<h4>The List</h4>
+					<!-- <h4>The List</h4>
 					<p>Add your email to our list to get the latest info and news. <br />Of course, we'll <b>never</b>
 						sell or distribute your email to someone.</p>
 					<form action="/email" method="POST">
 						<input type="text" name="email" />
 						<input type="submit" value="save">
-					</form>
+					</form> -->
 				</div>
 				
 				<div class="section">
