trying to fix up formatting.

--- a/views/download_index.erb
+++ b/views/download_index.erb
@@ -42,7 +42,7 @@
 			<img src="/img/logo.png" id="logotype" />
 			<br class="clear"/>
 			<div class="sections">				
-				<div class="section">
+				<!--<div class="section">-->
 					<p class="top">		
 						Pneumatique Electronique is here on a monthly basis to cater to your electronic music needs every third saturday night from 9pm to 2am. Using our resident DJs and guest DJs or guest acts we'll be playing danceable electronic music to you. Our ambition is to reduce the gap between the plethora of electronic genres available out there!					
 					</p>
@@ -67,7 +67,7 @@
 						<input type="text" name="email" />
 						<input type="submit" value="save">
 					</form> -->
-				</div>
+				<!--</div>-->
 				
 				
 				<br class="clear"/>
